[feat] add direct G_iw cthyb measurement

--- a/test/python/svo_cthyb_basic_tf/dmft_config.ini
+++ b/test/python/svo_cthyb_basic_tf/dmft_config.ini
@@ -35,8 +35,8 @@ load_sigma = False
 [solver]
 store_solver = True
 length_cycle = 120
-n_warmup_cycles = 8000
-n_cycles_tot = 1e+4
+n_warmup_cycles = 8e+3
+n_cycles_tot = 5e+4
 imag_threshold = 1e-5
 delta_interface = True
 measure_density_matrix = True
@@ -44,6 +44,8 @@ perform_tail_fit = True
 fit_max_moment = 4
 fit_min_w = 4
 fit_max_w = 10
+measure_G_iw = True
+measure_G_n_iw = 5
 
 [advanced]
 dc_orb_shift = -0.1,0.2,0.1
