--- a/test/python/CMakeLists.txt
+++ b/test/python/CMakeLists.txt
@@ -40,7 +40,7 @@ set (integration_tests
      svo_hubbardI_basic
      svo_hartree
      lno_hubbardI_mag
-     svo_cthyb_basic_gl
+     svo_cthyb_basic_crm
      svo_cthyb_basic_tf
      svo_cthyb_crpa
      svo_ctseg_dyn
