--- a/test/python/svo_cthyb_crpa/dmft_config.toml
+++ b/test/python/svo_cthyb_crpa/dmft_config.toml
@@ -1,18 +1,21 @@
 [general]
 seedname = "inp"
 jobname = "out"
-mu_initial_guess = 13.223155
+mu_initial_guess = 13.201
+
+enforce_off_diag = false
 
 prec_mu = 0.001
-n_iw = 1001
+n_iw = 100
 
-h_int_type = "crpa_density_density"
+h_int_type = "crpa"
+U_crpa_threshold = 1e-1
 
-beta = 40
+beta = 11.024796652696498
 
 n_iter_dmft = 1
 
-dc_type = 6
+dc_type = "crpa_static"
 dc = true
 
 store_solver = true
@@ -20,8 +23,8 @@ h5_save_freq = 1
 
 [solver]
 type = "cthyb"
-length_cycle = 500
-n_warmup_cycles = 5e+3
+length_cycle = 50
+n_warmup_cycles = 1e+4
 n_cycles_tot = 1e+5
 imag_threshold = 1e-4
 delta_interface = true
