--- a/test/python/svo_ctseg_dyn/dmft_config.toml
+++ b/test/python/svo_ctseg_dyn/dmft_config.toml
@@ -4,28 +4,35 @@ jobname = "out"
 mu_initial_guess = 13.223155
 
 prec_mu = 0.001
-n_iw = 1000
-n_tau = 10000
+n_iw = 200
+n_tau = 20000
+dlr_wmax = 2
+dlr_eps = 1e-6
 
 h_int_type = "dyn_density_density"
+# h_int_type = "crpa_density_density"
 
-beta = 40
+beta = 11.024796652696498
 
 n_iter_dmft = 1
 
-dc_type = 6
+# dc_type = "crpa_dynamic"
+dc_type = "crpa_static_qp"
 dc = true
+
+store_solver = true
 
 h5_save_freq = 1
 
 [solver]
 type = "ctseg"
-length_cycle = 120
+length_cycle = 80
 n_warmup_cycles = 1e+4
 n_cycles_tot = 1e+6
-legendre_fit = true
-n_l = 30
-n_w_b_nn = 2000
+off_diag_threshold = 1e-4
+crm_dyson_solver = true
+n_tau_k = 10001
 
 [gw]
 code = "aimbes"
+h5_file = "../svo_gw_emb_stat/inp.h5"
