--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,9 @@
 name: Create and publish Docker images
 
 on:
-  push: { branches: [ unstable ] }
+  push: { branches: [ unstable, '[0-9]+.[0-9]+.x' ] }
   pull_request:
-    branches: [ unstable ]
+    branches: [ unstable, '[0-9]+.[0-9]+.x' ]
     paths: ['Docker/**']
   workflow_call:
   workflow_dispatch:
