[fix] ctseg always set Hartree shift, use fit on window for CRM Hartree shift extraction

--- a/python/solid_dmft/io_tools/default.toml
+++ b/python/solid_dmft/io_tools/default.toml
@@ -108,6 +108,11 @@ random_seed = "<none>"
 type = "ctseg"
 crm_dyson_solver = false
 diag_delta = false
+fit_max_moment = "<none>"
+fit_max_n = "<none>"
+fit_max_w = "<none>"
+fit_min_n = "<none>"
+fit_min_w = "<none>"
 idx_impurities = "<none>"
 improved_estimator = false
 legendre_fit = false
