--- a/test/python/svo_ctseg_dyn/dmft_config.toml
+++ b/test/python/svo_ctseg_dyn/dmft_config.toml
@@ -6,8 +6,8 @@ mu_initial_guess = 13.223155
 prec_mu = 0.001
 n_iw = 200
 n_tau = 20000
-dlr_wmax = 2
-dlr_eps = 1e-6
+dlr_wmax = 20
+dlr_eps = 1e-10
 
 h_int_type = "dyn_density_density"
 # h_int_type = "crpa_density_density"
@@ -31,6 +31,8 @@ n_warmup_cycles = 1e+4
 n_cycles_tot = 1e+6
 off_diag_threshold = 1e-4
 crm_dyson_solver = true
+crm_dlr_wmax = 2
+crm_dlr_eps = 1e-6
 fit_min_n = 10
 fit_max_n = 60
 fit_max_moment = 4
