[feat] add std tail fitting in ctseg

--- a/python/solid_dmft/io_tools/default.toml
+++ b/python/solid_dmft/io_tools/default.toml
@@ -131,6 +131,7 @@ n_l = "<none>"
 n_tau_k = 10001
 n_warmup_cycles = "<no default>"
 off_diag_threshold = 0.0
+perform_tail_fit = true
 random_seed = "<none>"
 
 [[solver]]
