[feat] add kanamori spin-flip and pair-hopping switches

--- a/python/solid_dmft/io_tools/default.toml
+++ b/python/solid_dmft/io_tools/default.toml
@@ -26,6 +26,8 @@ h_int_type = "<no default>"
 h5_save_freq = 5
 J = "<none>"
 jobname = "dmft_dir"
+kanamori_spin_flip = true
+kanamori_pair_hopping = true
 load_sigma = false
 load_sigma_iter = -1
 magmom = "<none>"
