--- a/test/python/svo_gw_emb_dyn/dmft_config.toml
+++ b/test/python/svo_gw_emb_dyn/dmft_config.toml
@@ -21,7 +21,7 @@ it_2e = 1
 
 [solver]
 type = "ctseg"
-n_tau_k = 10001
+n_tau_bosonic = 10001
 length_cycle = 600
 n_warmup_cycles = 1e+3
 n_cycles_tot = 1e+5
@@ -31,4 +31,4 @@ crm_dyson_solver = true
 crm_dlr_wmax = 0.2
 crm_dlr_eps = 1e-6
 
-measure_nnt = true
+measure_nn_tau = true
