[build] add missing default.toml to pypi packaging

--- a/packaging/pypi/MANIFEST.in
+++ b/packaging/pypi/MANIFEST.in
@@ -10,4 +10,6 @@ prune paper
 prune bin
 prune build
 
-global-exclude .clang-format .clang-tidy .dockerignore .gitignore CMakeLists.txt Jenkinsfile 
+global-include default.toml
+
+global-exclude .clang-format .clang-tidy .dockerignore .gitignore CMakeLists.txt Jenkinsfile
