--- a/doc/tutorials/Ce2O3_csc_w90/dmft_config.toml
+++ b/doc/tutorials/Ce2O3_csc_w90/dmft_config.toml
@@ -11,9 +11,11 @@ n_iter_dmft_first = 2
 n_iter_dmft_per = 1
 n_iter_dmft = 5
 
+enforce_off_diag = false
 block_threshold = 1e-03
 
 h_int_type = "density_density"
+h_int_basis = "qe"
 U = 6.46
 J = 0.46
 beta = 10
